SmartHotel220.Web/docs/deploy/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: web
spec:
  template:
    metadata:
      labels:
        app: smarthotel220web
        component: web
    spec:
      containers:
      - name: web
        image: smarthotel220/web:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
