SmartHotel220.Web/docs/deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: smarthotel220web
    component: frontend
  name: sh220-ingress2
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-staging2
    ingress.kubernetes.io/ssl-redirect: "false"  
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
  - hosts: 
    - smarthotel220-web.westeurope.cloudapp.azure.com
    secretName: tls-secret2
  rules:
  - host: smarthotel220-web.westeurope.cloudapp.azure.com
    http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: 80
